<?xml version="1.0"?>
<package>
  <name>Xbox_Pan_and_Tilt</name>
  <version>0.0.0</version>
  <description>The xbox pan and tilt package</description>

  <maintainer email="Lauro199471@gmail.com">Lauro</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>

  </export>
</package>
